--- a/ToDoDevSecOpsMinimalAPI/Properties/launchSettings.json
+++ b/ToDoDevSecOpsMinimalAPI/Properties/launchSettings.json
@@ -3,28 +3,31 @@
     "http": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5222"
+      "applicationUrl": "http://localhost:5000"
     },
     "https": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "api/swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7097;http://localhost:5222"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     },
     "Container (Dockerfile)": {
       "commandName": "Docker",
       "launchBrowser": true,
-      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
+      "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/api/swagger",
       "environmentVariables": {
         "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        "ASPNETCORE_HTTP_PORTS": "8080",
+        "ASPNETCORE_URLS": "https://+:5001;http://+:5000"
       },
       "publishAllPorts": true,
       "useSSL": true
