--- a/ToDoDevSecOpsMinimalAPI/ToDoDevSecOpsMinimalAPI.csproj
+++ b/ToDoDevSecOpsMinimalAPI/ToDoDevSecOpsMinimalAPI.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.11" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="Microsoft.OpenApi" Version="3.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="10.0.1" />
@@ -29,9 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Application\\Common\\Interfaces\\" />
     <Folder Include="Application\\Infrastructure\\Persistence\\Migrations\\" />
-    <Folder Include="Application\\Infrastructure\\Services\\" />
   </ItemGroup>
 
   <ItemGroup>
