--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -7,7 +7,8 @@ on:
     branches: [ "develop", "main" ]
 
 jobs:
-  build-and-test:
+  build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
@@ -25,7 +26,7 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
 
-    - name: Test
+    - name: Test (with coverage)
       run: |
         dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
@@ -44,6 +45,12 @@ jobs:
       with:
         name: code-coverage-report
         path: coverage-report
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
+      with:
+        files: ./TestResults/**/coverage.cobertura.xml
+        fail_ci_if_error: true
 
     - name: Install Newman
       run: npm install -g newman
