Fixed warnings and modified CI pipeline for code coverage functionality.

--- a/ToDoDevSecOpsMinimalAPI/ToDoDevSecOpsMinimalAPI.csproj
+++ b/ToDoDevSecOpsMinimalAPI/ToDoDevSecOpsMinimalAPI.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>1b7349ad-ac32-4131-8e10-7b935d7e8ae9</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <NoWarn>$(NoWarn);CS7022</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
@@ -33,7 +34,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <!-- enable collecting code coverage in dotnet test and Visual Studio Test Explorer -->
-    <PackageReference Include="coverlet.collector" Version="4.1.0" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
