--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,25 +30,16 @@ jobs:
       run: |
         dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
 
-    - name: Install ReportGenerator
-      run: dotnet tool install -g dotnet-reportgenerator-globaltool --version 5.1.22
-
-    - name: Add Dotnet Global Tools to PATH
-      run: echo "PATH=$PATH:$HOME/.dotnet/tools" >> $GITHUB_ENV
-
-    - name: Generate Coverage Report
-      run: |
-        reportgenerator -reports:"**/TestResults/**/coverage.cobertura.xml" -targetdir:coverage-report -reporttypes:Html
-
-    - name: Upload Coverage Report Artifact
+    - name: Upload coverage XML artifact
       uses: actions/upload-artifact@v4
       with:
-        name: code-coverage-report
-        path: coverage-report
+        name: coverage-xml
+        path: TestResults/**/coverage.cobertura.xml
 
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v4
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: ./TestResults/**/coverage.cobertura.xml
         fail_ci_if_error: true
 
