--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,7 +28,14 @@ jobs:
 
     - name: Test (with coverage)
       run: |
-        dotnet test --configuration Release --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
+        dotnet test --configuration Release --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./TestResults
+
+    - name: Show TestResults files
+      run: |
+        echo 'TestResults contents:'
+        ls -R TestResults || true
+        echo 'Bin output:'
+        ls -R **/bin || true
 
     - name: Upload coverage XML artifact
       uses: actions/upload-artifact@v4
